ingress-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  selector:
    app: ingress-nginx
  ports:
    - name: http
      protocol: TCP
      port: 80  # Port used for HTTP traffic
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443  # Port used for HTTPS traffic
      targetPort: 443
  type: LoadBalancer  # or NodePort if you prefer
