jenkins-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-external
  namespace: devops-tools
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: jenkins
