jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: devops-tools
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: jenkins-test-devops.theoremus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
tls:
    - hosts:
        - jenkins-test-devops.theoremus.com  # Your DNS host
      secretName: my-tls-secret  # The name of the Secret with your SSL/TLS certificates
